Bug 1906342 - part1 : evict data furthest from the targeted playback position. r=media-playback-reviewers,karlt, a=dmeehan

If we always clear data from one side (either buffer head or tail)
without considering the distance between the targeted position and the
buffer's interval, then it's possible to remove the data which website
just appended and are required for decoding the targeted position.

Therefore, we should consider to evict data from the furthest place
which won't affect the targeted position.

Differential Revision: https://phabricator.services.mozilla.com/D215822